add core structure to homepage

--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
     <meta name="keywords" content="love running, running club, dublin, ireland">
 
     <title>Love Running</title>
-    
+
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Love Running</h1>
+    <header>Header content</header>
+
+    <section>Image section</section>
+    <section>club ethos content</section>
+    <section>Locations, distances, times</section>
+
+    <footer>Social Links</footer>
+
 </body>
 </html>
