--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,8 +12,22 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
-    <header>Header content</header>
+    <header>
+        <a href="index.html">
+            <h1>Love Running</h1>
+        </a>
+
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+
+    </header>
 
     <section>Image section</section>
     <section>club ethos content</section>
@@ -21,4 +36,5 @@
     <footer>Social Links</footer>
 
 </body>
+
 </html>
