--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </a>
 
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
+            <ul id="menu">
                 <li><a href="signup.html">Sign Up</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
 
