Add animation and styling to hero-image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 
     </header>
 
-    <section>Image section</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+    </section>
+
     <section>club ethos content</section>
     <section>Locations, distances, times</section>
 
