Add club ethos main structure

--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
         </div>
     </section>
 
-    <section>club ethos content</section>
+    <section id="club-ethos">
+        <h1>Why Love Running with Us?</h1>
+        <div id="left-about">text left</div>
+        <div id="right-about">text right</div>
+        <div id="center-about">center</div>
+        
+    </section>
+
     <section>Locations, distances, times</section>
 
     <footer>Social Links</footer>
