--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </section>
 
     <section id="club-ethos">
-        <h1>Why Love Running with Us?</h1>
+        <h2 id="welcome">Why Love Running with Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>
@@ -82,8 +82,12 @@
                 </p>
             </div>
         </div>
-        
-        <div id="center-about">center</div>
+
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
+        </div>
 
     </section>
 
