Font-Awesome script implementation, club ethos icons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="left-about">
             <div class="left-about-heading">
                 <h2>
-                    Feel Healthy
+                    Feel Healthy <i class="fa-solid fa-heart-pulse"></i>
                 </h2>
                 <hr>
                 <p>
@@ -52,7 +52,7 @@
             </div>
             <div class="left-about-heading">
                 <h2>
-                    Feel Free
+                    Feel Free <i class="fa-brands fa-fly"></i>
                 </h2>
                 <hr>
                 <p>
@@ -64,7 +64,7 @@
         <div id="right-about">
             <div class="right-about-heading">
                 <h2>
-                    Get Social
+                    Get Social <i class="fa-solid fa-globe"></i>
                 </h2>
                 <hr>
                 <p>
@@ -74,7 +74,7 @@
             </div>
             <div class="right-about-heading">
                 <h2>
-                    Feel Strong
+                    Feel Strong <i class="fa-solid fa-dumbbell"></i>
                 </h2>
                 <hr>
                 <p>
@@ -94,6 +94,9 @@
     <section>Locations, distances, times</section>
 
     <footer>Social Links</footer>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/f8db83ac48.js" crossorigin="anonymous"></script>
 
 </body>
 
