--- a/gallery.html
+++ b/gallery.html
@@ -8,12 +8,52 @@
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, dublin, ireland">
 
-    <title>Document</title>
+    <title>Love Running</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Love Running</h1>
+        </a>
+
+        <nav>
+            <ul id="menu">
+                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="gallery.html" class="active">Gallery</a></li>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
+    
+
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/f8db83ac48.js" crossorigin="anonymous"></script>
 
 </body>
 
