--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,17 @@
 
     </header>
 
-    
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athelets running together">
+        <img src="assets/images/girls.jpg" alt="Three girls at charity paint running festival">
+        <img src="assets/images/runner3.jpg" alt="Solo male runner jogging through phoenix park">
+        <img src="assets/images/man.jpg" alt="Man at a charity paint running festival">
+        <img src="assets/images/runner1.jpg" alt="solo female runner jogging through phoenix park">
+        <img src="assets/images/runner2.jpg" alt="runners competing in marathon">
+        <img src="assets/images/runner4.jpg" alt="solo female runner jogging on a beach">
+        <img src="assets/images/running_gang.jpg" alt="large group of runners taking part in a marathon on a rainy day">
+        <img src="assets/images/mud-run.jpg" alt="two female runners taking a muddy selfie">
+    </section>
 
     <footer>
         <ul class="social-networks">
